# Scarabarm

./: .gitignore  README.md
Arm_description/: setup.py
Arm_description/meshes/: joint_3_1_1.stl  joint_5_1_1.stl
Arm_description/urdf/: Arm.gazebo  Arm.xacro
arm/Arm_description/meshes/: joint_1_1.stl  joint_4_1.stl
arm/Arm_description/urdf/: Arm.gazebo  Arm.xacro
ee/gripper_sim_description/: setup.py
ee/gripper_sim_description/urdf/: gripper_sim.gazebo  gripper_sim.xacro
install/: local_setup.sh  setup.sh
install/Arm_description/share/Arm_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/full_scrab_arm/share/full_scrab_arm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gripper_sim_description/share/gripper_sim_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/odrive_botwheel_explorer/share/odrive_botwheel_explorer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/odrive_can/lib/odrive_can/: odrive_can_node
install/odrive_can/share/odrive_can/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/odrive_ros2_control/share/odrive_ros2_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  odrive_hardware_interface.xml  package.sh  package.xml
install/scarabarm_control/lib/scarabarm_control/: scarab_controller  scarab_js_agg
install/scarabarm_sim/share/scarabarm_sim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scarabarm_sim/share/scarabarm_sim/config/: full_scrab_arm.ros2_control.xacro  full_scrab_arm.urdf.xacro  ros2_control_sim.yaml
install/scarabarm_sim/share/scarabarm_sim/launch/: gazebo_sim.launch.py  moveit_sim.launch.py  spawn_controllers.launch.py
log/: latest_build
odrive_traj_exec/: CMakeLists.txt  package.xml  readme.txt  setup.cfg  setup.py
odrive_traj_exec/launch/: start_odrive_and_arm.launch.py  turn_off_all.launch.py
odrive_traj_exec/odrive_traj_exec/: arm_axes.py  joint_position_executor.py  traj_follower.py  traj_node.py
scarab_matlab/: dual_robot_gui.m  dual_robot_gui_ik.m  dual_robot_gui_traj.asv  dual_robot_gui_traj.m  generate_urdf.py  gui_joint_control.m  robot_contorl_1.asv  robot_contorl_1.m  robot_contorl_2_5dof.m  ros2_test1.m  ros_setup.m  test1.m  test2.m  untitled.m
scarab_matlab/meshes/: joint_6.stl  link_3.stl  outer_link_x_1.stl  outer_link_y_1.stl
scarab_matlab/urdf/: Arm.xacro  full_scarab_arm.urdf  gripper.urdf  gripper_sim.xacro  materials.xacro  scarab_arm.urdf
scarabarm_control/: setup.cfg  setup.py  setup.py.bak
scarabarm_control/config/: ros2_control_odrive.yaml
scarabarm_control/launch/: bringup_pi.launch.py
scarabarm_control/src/scarabarm_control/: scarabarm_controller_node.py
scarabarm_description/: CMakeLists.txt  package.xml
scarabarm_description/arm/Arm_description/launch/: display.launch.py
scarabarm_description/arm/Arm_description/meshes/: base_link.stl  joint_5_1.stl  joint_6_1.stl  link_2_1.stl
scarabarm_description/arm/Arm_description/urdf/: Arm.xacro  materials.xacro
scarabarm_description/config/: my_controllers.yaml
scarabarm_description/ee/gripper_sim_description/: package.xml
scarabarm_description/ee/gripper_sim_description/launch/: gazebo.launch.py
scarabarm_description/ee/gripper_sim_description/meshes/: finger_x_1.stl  gripper_base_link.stl  inner_link_y_1.stl
scarabarm_description/full_scrab_arm/: CMakeLists.txt  package.xml
scarabarm_description/full_scrab_arm/launch/: gazebo.launch.py
scarabarm_description/full_scrab_arm/urdf/: full_scrab_arm.xacro
scarabarm_description/launch/: gazebo.launch.py  robot_state_publisher.launch.py
scarabarm_description/meshes/: finger_x_1.stl  finger_y_1.stl
scarabarm_description/meshes/scarabarm/: joint_1_1.stl  joint_2_1.stl  joint_4_1.stl  joint_5_1.stl  joint_6_1.stl  link_2_1.stl
scarabarm_description/urdf/: Arm.xacro  materials.xacro  ros2_control.xacro  scarabarm.gazebo.xacro  scarabarm_urdf.xacro
scarabarm_description/urdf/robots/: scarabarm_urdf.xacro
scarabarm_gazebo/: CMakeLists.txt  package.xml
scarabarm_gazebo/launch/: mycobot.gazebo.launch.py
scarabarm_gripper/: package.xml
scarabarm_gripper/Arm_description/meshes/: finger_x__1__2.stl  finger_x__2__2.stl  gripper_base_1.stl  inner_link_x_1.stl  inner_link_y_1.stl  joint_5_1.stl  outer_link_y_1.stl
scarabarm_gripper/Arm_description/urdf/: Arm.gazebo  Arm.xacro
scarabarm_gripper/launch/: gazebo.launch.py
scarabarm_gripper/meshes/: base_link.stl  joint_3_1.stl  joint_6_1.stl  link_3_1.stl  outer_link_x_1.stl
scarabarm_gripper/urdf/: Arm.gazebo  Arm.xacro
scarabarm_moveit/: .setup_assistant  CMakeLists.txt  package.xml  plugin.xml
scarabarm_moveit/config/: Arm.ros2_control.xacro  Arm.srdf  Arm.urdf.xacro  full_scrab_arm.ros2_control.xacro  full_scrab_arm.srdf  full_scrab_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kinematics_ros2.yaml  moveit_controllers.yaml  odrive_system.yaml  ompl_planning.yaml  ompl_planning_ros2.yaml  ros2_controllers.yaml
scarabarm_moveit/launch/: bringup_real.launch.py  demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_only.launch.py  moveit_rviz.launch.py  real_robot_moveit.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
scarabarm_moveit/src/: odrive_system.cpp
scarabarm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
scarabarm_moveit_config/config/scarabarm/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  scarabarm.srdf
scarabarm_moveit_config/launch/: move_group.launch.py
scarabarm_odrive/: readme.txt  setup.cfg  setup.py
scarabarm_odrive/launch/: multi_odrive_launch.py  odrive_hardware.launch.py
scarabarm_ros2/: CMakeLists.txt  package.xml
(+204 files in other folders)
