[metadata]
name = odrive_traj_exec
version = 0.1.0
description = ODrive trajectory executor
maintainer = Your Name
maintainer_email = you@example.com
license = Apache-2.0

[options]
packages = find:
install_requires =
    setuptools
zip_safe = true

[options.entry_points]
console_scripts =
    traj_exec = odrive_traj_exec.arm_axes:main
    traj_follow = odrive_traj_exec.traj_follower:main

[develop]
script-dir = $base/lib/odrive_traj_exec
[install]
install-scripts = $base/lib/odrive_traj_exec


