[develop]
script-dir=$base/lib/scarabarm_control

[install]
install-scripts=$base/lib/scarabarm_control

[options]
packages = find:
package_dir =
    = src
install_requires =
    rclpy
    setuptools

[options.entry_points]
console_scripts =
    scarab_controller = scarabarm_control.scarabarm_controller_node:main
    scarab_js_agg     = scarabarm_control.joint_state_aggregator:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/scarabarm_control
share/scarabarm_control =
    package.xml
share/scarabarm_control/launch =
    launch/bringup_pi.launch.py
