[develop]
script-dir = $base/lib/scarabarm_control

[install]
install-scripts = $base/lib/scarabarm_control

[options]
packages = find:
package_dir =
    = src
install_requires =
    rclpy
    setuptools

[options.entry_points]
console_scripts =
    scarab_controller = scarabarm_control.scarabarm_controller_node:main
    scarab_js_agg     = scarabarm_control.joint_state_aggregator:main

[options.data_files]
# ───── keep the two lines you already had ─────
share/ament_index/resource_index/packages =
    resource/scarabarm_control
share/scarabarm_control =
    package.xml

# ───── NEW: install **both** launch files ─────
share/scarabarm_control/launch =
    launch/bringup_pi.launch.py           # ← existing (if you still need it)
    launch/bringup.launch.py              # ← the new one that starts ros2_control

# ───── NEW: install controller & hardware YAML ─────
share/scarabarm_control/config =
    config/ros2_control_odrive.yaml
    config/controllers.yaml
