<package format="3">
  <name>full_scrab_arm</name>
  <version>0.0.0</version>
  <description>Unified robot combining arm and gripper</description>
  <maintainer email="dkim41@sheffield.ac.uk">donggil</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>Arm_description</exec_depend>
  <exec_depend>gripper_sim_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
